navbar collapse issue resolved

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,9 +2,13 @@
   justify-content: space-between;
   background: white;
   font-family: "Montserrat", "sans-serif";
-  height: 126px;
-  padding: 0px;
+  padding: 25px 0px;
 }
+
+// .navbar-container {
+//   display: flex;
+//     justify-content: space-between;
+// }
 
 .navbar-mangolab .navbar-collapse {
   flex-grow: 0;
@@ -89,14 +93,19 @@
   font-weight: 650;
 }
 
-// medias:
 
-@media(max-width: 414px) {
-  .navbar-light .navbar-toggler {
-    border: 0px;
-    padding-right: 0px;
-  }
-  .navbar-mangolab {
-    height: 100px;
-  }
-}
+// examples:
+// .navbar-lewagon {
+//   justify-content: space-between;
+//   background: white;
+//   height: 126px;
+//   padding: 0px;
+// }
+
+// .navbar-lewagon .navbar-collapse {
+//   flex-grow: 0;
+// }
+
+// .navbar-lewagon .navbar-brand img {
+//   width: 40px;
+// }
